--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
 			"**/*.ts",
 			"**/assets/**",
 			"**/y/**",
+			"**/saved_games/**",
 			"**/zdata/**",
 			"**/**/zdata/**",
 			"**/*php/**",
