--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,11 +27,13 @@
   "workbench.editor.enablePreview": false,
 	"search.exclude": {
 		"_versions": true,
+		"**/_history": true,
 		"**/node_modules": true,
 		"**/folder_to_exclude": true
 	},
 	"files.exclude": {
 		"node_modules": true,
+		"_history": true,
 		"package-lock*": true,
 		"package.json": true,
 		"jsconfig.json": false,
